work in progress

--- a/apps/front/src/components/pages/home/home.html
+++ b/apps/front/src/components/pages/home/home.html
@@ -1,6 +1,132 @@
 <div>Home here:
   <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
     hx-swap="innerHTML">
-    Click Me!
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    Click Me! nice
+  </button>
+</div>
+<div>Home here:
+  <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
+    hx-swap="innerHTML">
+    It stays, hi
   </button>
 </div>
