--- a/apps/front/src/components/layouts/root/root.html
+++ b/apps/front/src/components/layouts/root/root.html
@@ -4,6 +4,7 @@
 <head>
   <title>{{title}}</title>
   <link rel="stylesheet" href="static/styles.css?version={{server_version}}" />
+  <link rel="icon" type="image/png" href="/static/favicon.png">
 </head>
 
 <body>
