--- a/apps/front/src/components/pages/home/home.html
+++ b/apps/front/src/components/pages/home/home.html
@@ -127,6 +127,6 @@
 <div>Home here:
   <button class="p-2 bg-red-500 rounded-md text-white" hx-get="/" hx-trigger="click" hx-target="#root"
     hx-swap="innerHTML">
-    It stays, hi
+    nice 7
   </button>
 </div>
